backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goorm-alb
  annotations:
    - alb.ingress.kubernetes.io/scheme: internet-facing
    - alb.ingress.kubernetes.io/target-type: ip
    - alb.ingress.kubernetes.io/group.name: node-1
    - alb.ingress.kubernetes.io/group.order: '1'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
